test replication new nodeoffile5